Modifying Mission file

--- a/mission.html
+++ b/mission.html
@@ -38,6 +38,13 @@
         </div>
         </div>
       </nav>
+      
+      <div class="container">
+          <h1 class="display-1 text-center pt-4 mt-4">Welcome to Senplifye-L</h1>
+
+          <h1>Our mission</h1>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id recusandae quisquam a repellat dignissimos unde inventore accusamus. Earum soluta modi molestiae? Error blanditiis inventore sint quas odio, dicta rerum eius?</p>
+      </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
