--- a/subjects.html
+++ b/subjects.html
@@ -31,6 +31,14 @@
             <li class="nav-item">
               <a class="nav-link" href="/mission.html">Mission</a>
             </li>
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+        
+            <title>Hello, world!</title>
+          </head>
+          <body>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container">
+                    <a class="navbar-brand" href="#">Senplifye-L</a>
             <li class="nav-item">
               <a class="nav-link" href="/about.html">About</a>
             </li>
@@ -38,6 +46,10 @@
         </div>
         </div>
       </nav>
+
+      <div class="container">
+        <h1 class="display-1 text-center pt-4 mt-4">Our Subject</h1>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
